fix overflow-x issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,27 @@
 @keyframes ldio-nvnx6loo9jr-1 {
-  0% { transform: rotate(0deg) }
-  50% { transform: rotate(-45deg) }
-  100% { transform: rotate(0deg) }
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-45deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 @keyframes ldio-nvnx6loo9jr-2 {
-  0% { transform: rotate(180deg) }
-  50% { transform: rotate(225deg) }
-  100% { transform: rotate(180deg) }
+  0% {
+    transform: rotate(180deg);
+  }
+  50% {
+    transform: rotate(225deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
 }
 .ldio-nvnx6loo9jr > div:nth-child(2) {
-  transform: translate(-15px,0);
+  transform: translate(-15px, 0);
 }
 .ldio-nvnx6loo9jr > div:nth-child(2) div {
   position: fixed;
@@ -20,19 +32,28 @@
   border-radius: 120px 120px 0 0;
   background: #f8b26a;
   animation: ldio-nvnx6loo9jr-1 1s linear infinite;
-  transform-origin: 60px 60px
+  transform-origin: 60px 60px;
 }
 .ldio-nvnx6loo9jr > div:nth-child(2) div:nth-child(2) {
-  animation: ldio-nvnx6loo9jr-2 1s linear infinite
+  animation: ldio-nvnx6loo9jr-2 1s linear infinite;
 }
 .ldio-nvnx6loo9jr > div:nth-child(2) div:nth-child(3) {
   transform: rotate(-90deg);
   animation: none;
-}@keyframes ldio-nvnx6loo9jr-3 {
-   0% { transform: translate(190px,0); opacity: 0 }
-   20% { opacity: 1 }
-   100% { transform: translate(70px,0); opacity: 1 }
- }
+}
+@keyframes ldio-nvnx6loo9jr-3 {
+  0% {
+    transform: translate(190px, 0);
+    opacity: 0;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(70px, 0);
+    opacity: 1;
+  }
+}
 .ldio-nvnx6loo9jr > div:nth-child(1) {
   display: block;
 }
@@ -44,11 +65,17 @@
   height: 16px;
   border-radius: 50%;
   background: #e15b64;
-  animation: ldio-nvnx6loo9jr-3 1s linear infinite
+  animation: ldio-nvnx6loo9jr-3 1s linear infinite;
 }
-.ldio-nvnx6loo9jr > div:nth-child(1) div:nth-child(1) { animation-delay: -0.67s }
-.ldio-nvnx6loo9jr > div:nth-child(1) div:nth-child(2) { animation-delay: -0.33s }
-.ldio-nvnx6loo9jr > div:nth-child(1) div:nth-child(3) { animation-delay: 0s }
+.ldio-nvnx6loo9jr > div:nth-child(1) div:nth-child(1) {
+  animation-delay: -0.67s;
+}
+.ldio-nvnx6loo9jr > div:nth-child(1) div:nth-child(2) {
+  animation-delay: -0.33s;
+}
+.ldio-nvnx6loo9jr > div:nth-child(1) div:nth-child(3) {
+  animation-delay: 0s;
+}
 .loadingio-spinner-bean-eater-74c4gotmja5 {
   width: 200px;
   height: 200px;
@@ -66,11 +93,12 @@
   backface-visibility: hidden;
   transform-origin: 0 0;
 }
-.ldio-nvnx6loo9jr div { box-sizing: content-box; }
-.bg-img{
-  min-height: 100vh;
-  height: 100%;
-  width: 100%;
-  background-image: url("../assets/events/background.png");
+.ldio-nvnx6loo9jr div {
+  box-sizing: content-box;
+}
 
+.bg-img {
+  min-height: 100vh;
+  overflow: hidden;
+  background-image: url("../assets/events/background.png");
 }
